# evil-pipe

./: CMakeLists.txt  README.md
include/: server.hpp  session.hpp
src/: handleConnection.cpp  main.cpp  start.cpp
src/server/: start.cpp
src/session/: handleConnection.cpp  isPipedToBash.cpp  sendNullChunk.cpp
